--- a/about.Rmd
+++ b/about.Rmd
@@ -10,4 +10,4 @@ title: "About"
 - [Allie Cole](https://github.com/AllieCole)
 Allie has spent a large amount of time working in and around mangrove ecosystems, and has a degree in marine science. She is currently working with Spatial Analysis tools at UCSB. icole@bren.ucsb.edu 
 
-- Scout Leonard (scout@bren.ucsb.edu) Scout has completed coursework in Plant Systematics and Plant Biology. She is currently learning Spatial Analysis at UCSB.
+- [Scout Leonard](https://github.com/scoutcleonard) Scout has completed coursework in Plant Systematics and Plant Biology. She is currently learning Spatial Analysis at UCSB.
